<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtSend"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:layout_alignParentEnd="true"
        android:text="@string/lcdDefault"
        android:textSize="30sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/btnSend"
        android:onClick="onClick"
        android:textSize="30sp"
        android:layout_below="@+id/txtSend"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendkld"
        android:onClick="onClick"
        android:id="@+id/btnSendKLD"
        android:textSize="30sp"
        android:layout_alignBottom="@+id/btnSend"
        android:layout_below="@+id/txtSend" />

</RelativeLayout>
